--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             </nav>
         </div>
         <div class="bannerWrapper">
-            <div class="bigBg" id="homebanner">
+            <div class="bgContainer" id="homebanner">
             <div class="overlay">
             <div class="topBg">
                 <div id="homeTitle">
-                    <p class="smallTitle">Your journey</p>
+                    <span class="smallTitle">Your journey</span>
                     <h1>North</h1>
                 </div>
                 <div class="iconBox">
@@ -59,19 +59,139 @@
             </div>
             </div>
         </div>
-            <div class="divider"></div>
 <div class="bodyWrapper">
+    <div class="divider"></div>
     <div class="contentWrapper">
-<div class="overlapLeft">
-    <img src="img/hiking.jpg" alt="hiking">
-    <div>
-        <h2>Rocking those hiking boots?</h2>
-        <p>Be it challenging rock climbing or just a “family friendly” trip with beautiful sights we know just the right place. Browse our trips and recommendations, and get practical information  by locals so you can make sure you are all set for your Nordic holiday.</p>
-        <a href="#" class="buttonWithIcon">Learn more</a>
+        <div class="overlapLeft">
+            <img src="img/hiking.jpg" alt="hiking">
+            <div>
+                <h2>Rocking those hiking boots?</h2>
+                <p>Be it challenging rock climbing or just a “family friendly” trip with beautiful sights we know just the right place. Browse our trips and recommendations, and get practical information  by locals so you can make sure you are all set for your Nordic holiday.</p>
+                <a href="#" class="buttonWithIcon">Learn more</a>
+            </div>
+        </div>
+        <div class="overlapRight">
+            <img src="img/beach.jpg" alt="hiking">
+            <div>
+                <h2>Remember your beach attire</h2>
+                <p>Who said you can’t throw a “pool party” in -10 C? Grab your bikinis and dip in the hot pools of Iceland.</p>
+                <a href="#" class="buttonWithIcon">Learn more</a>
+            </div>
+        </div>
+        <p class="centered smallTitle">Countries</p>
+        <h2 class="centered">Explore our destinations</h2>
+        <p class="centered">Nordic landscapes are unique and outstandingly beautiful - but they can be tricky to get around. Get practical information by locals of each country about how to prepare for your trip.</p>
+        <div class="grid4col">
+            <div>
+                <img src="img/denmark.jpg" alt="Denmark" class="fullImg">
+                <a class="buttonWithIcon" href="#">Denmark</a>
+            </div>
+            <div>
+                <img src="img/faroeislands.jpg" alt="Faroe islands" class="fullImg">
+                <a class="buttonWithIcon" href="#">Faroe islands</a>
+            </div>
+            <div>
+                <img src="img/finland.jpg" alt="Finland" class="fullImg">
+                <a class="buttonWithIcon" href="#">Finland</a>
+            </div>
+            <div>
+                <img src="img/greenland.jpg" alt="Greenland" class="fullImg">
+                <a class="buttonWithIcon" href="#">Greenland</a>
+            </div>
+            <div>
+                <img src="img/iceland.jpg" alt="Iceland" class="fullImg">
+                <a class="buttonWithIcon" href="#">Iceland</a>
+            </div>
+            <div>
+                <img src="img/norway.jpg" alt="Norway" class="fullImg">
+                <a class="buttonWithIcon" href="#">Norway</a>
+            </div>
+            <div>
+                <img src="img/scotland.jpg" alt="Scotland" class="fullImg">
+                <a class="buttonWithIcon" href="#">Scotland</a>
+            </div>
+            <div>
+                <img src="img/sweden.jpg" alt="Sweden" class="fullImg">
+                <a class="buttonWithIcon" href="#">Sweden</a>
+            </div>
+        </div>
+        <!-- end of containerwrapper -->  
     </div>
 </div>
+<div class="bigBg">
+    <div class="bgContainer" id="auroraborealis">
+        <div class="overlay">
+            <div class="bigBgContent">
+                <div class="bigBgWrapper1">
+                    <h2>Natural nightlights</h2>
+                    <p>Just because it's dark, it doesn't mean that there's nothing to see here. See the northern lights from our cottages</p>
+                    <a href="#" class="buttonWithIcon">Find accomodation</a>
+                </div>
+                <div class="bigBgWrapper2">
+                    <img src="img/video1.png" alt="Video 1" width="362">
+                    <img src="img/video2.png" alt="Video 2" width="362">
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
 </div>
+<div class="bodyWrapper">
+    <div class="contentWrapper">
+        <p class="smallTitle centered">What to do?</p>
+        <h2 class="centered">Irresistible offers</h2>
+        <div class="grid4col">
+            <div class="centered">
+                <img src="img/icons/ship.png" alt="ship" width="100">
+                <p class="smallTitle"><strong>Things to do</strong></p>
+                <span>Looking for more adventure? Browse activities nearby</span>
+                <a class="buttonWithIcon centered" href="#">See offers</a>
+            </div>
+            <div class="centered">
+                <img src="img/icons/city.png" alt="city" width="100">
+                <p class="smallTitle"><strong>Places to see</strong></p>
+                <span>Explore the iconic places and historical buildings of the city</span>
+                <a class="buttonWithIcon centered" href="#">See offers</a>
+            </div>
+            <div class="centered">
+                <img src="img/icons/location-pin.png" alt="location" width="100">
+                <p class="smallTitle"><strong>Sightseeing made simple</strong></p>
+                <span>Use our maps, or ask our local guides to help you find your way</span>
+                <a class="buttonWithIcon centered" href="#">See offers</a>
+            </div>
+            <div class="centered">
+                <img src="img/icons/museum.png" alt="ship" width="100">
+                <p class="smallTitle"><strong>We've got stories to tell</strong></p>
+                <span>Today's culture is vastly affected by the past so why not explore it</span>
+                <a class="buttonWithIcon centered" href="#">See offers</a>
+            </div>
+        </div>
+<div class="photoCollage">
+    <div>
+        <img src="img/finland.jpg">
+    </div>
+    <div>
+        <p class="smallTitle">Food & drink</p>
+        <h2>Try local specialties</h2>
+        <p>Are you a passionate foodie? Try the local specialties for cheaper outside of the season.</p>
+        <p>Browse through our recommendations for places to eat, and see what you’ll want to bring home.</p>
+        <a href="#" class="buttonWithIcon">See offers</a>
+    </div>
+    <div>
+        <img src="img/finland.jpg">
+    </div>
+    <div>
+        <img src="img/finland.jpg">
+    </div>
 </div>
+
+
+
+
+    </div>
+</div>  
+
+
 </body>
 </body>
 </html>
