index is ready for desktop

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <p>Just because it's dark, it doesn't mean that there's nothing to see here. See the northern lights from our cottages</p>
                     <a href="#" class="buttonWithIcon">Find accomodation</a>
                 </div>
-                <div class="bigBgWrapper2">
+                <div class="bigBgWrapper2Right">
                     <img src="img/video1.png" alt="Video 1" width="362">
                     <img src="img/video2.png" alt="Video 2" width="362">
                 </div>
@@ -168,7 +168,7 @@
         </div>
 <div class="photoCollage">
     <div>
-        <img src="img/finland.jpg">
+        <img src="img/food1.jpg">
     </div>
     <div>
         <p class="smallTitle">Food & drink</p>
@@ -178,20 +178,108 @@
         <a href="#" class="buttonWithIcon">See offers</a>
     </div>
     <div>
-        <img src="img/finland.jpg">
+        <img src="img/food2.jpg">
     </div>
     <div>
-        <img src="img/finland.jpg">
+        <img src="img/food3.jpg">
     </div>
 </div>
-
-
-
-
-    </div>
+</div>
 </div>  
-
-
-</body>
+<div class="bigBg">
+    <div class="bgContainer" id="contact">
+        <div class="overlayDark">
+            <div class="bigBgContent">
+                <div class="bigBgWrapper1">
+                    <p class="smallTitle">Contact us</p>
+                    <h2>Do you have any questions?</h2>
+                    <p>Our staff are happy to help during the local working hours. You can call the offices, or use the form below to contact us.</p>
+                    <div class="iconBox">
+                            <img src="img/icons/phone2.png" alt="phone">
+                            <p>Tel.: +1 23 45678</p>
+                        </div>
+                        <div class="iconBox">
+                            <img src="img/icons/mail.png" alt="mail">
+                            <p>info@yourjourneynorth.dk</p>
+                        </div>
+                        <div class="iconBox">
+                            <img src="img/icons/address.png" alt="address">
+                            <p>Fosenkaia 7,<br>Trondheim<br>Norway</p>
+                        </div>
+                    </div>
+                    <div class="bigBgWrapper2Left">
+                        <h2>Message us:</h2>
+                        <form>
+                            <div>
+                            <label for="name">Your name:</label>
+                            <input type="text" name="name">
+                            </div>
+                            <div>
+                                <label for="email">Your e-mail:</label>
+                                <input type="email">
+                            </div>
+                            <div class="messageField">
+                                <label for="message">Your message:</label>
+                                <input type="text" name="message">
+                            </div>
+                            <button class="buttonWithIcon" type="submit">Send message</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="bodyWrapper">
+<footer>
+    <div>
+        <h4>Menu</h4>
+        <a href="#">Home</a>
+        <a href="#">Countries</a>
+        <a href="#">Trips</a>
+        <a href="#">Accomodation</a>
+        <a href="#">Contact us</a>
+    </div>
+    <div>
+        <h4>Information</h4>
+        <a href="#">About us</a>
+        <a href="#">Privacy policy</a>
+        <a href="#">FAQ</a>
+    </div>
+    <div>
+        <h4>newsletter</h4>
+        <form>
+            <div>
+                <label for="name">Your name</label>
+                <input type="text">
+            </div>
+            <div>
+                <label for="email">Your email</label>
+                <input type="email">
+            </div>
+            <button type="submit" class="buttonWithIcon" >Sign up</button>
+        </form>
+    </div>
+    <div>
+        <h4>Contact</h4>
+        <div class="iconBox">
+            <img src="img/icons/phone2.png" alt="phone">
+            <p>Tel.: +1 23 45678</p>
+        </div>
+        <div class="iconBox">
+            <img src="img/icons/mail.png" alt="mail">
+            <p>info@yourjourneynorth.dk</p>
+        </div>
+        <div class="iconBox">
+            <img src="img/icons/address.png" alt="address">
+            <p>Fosenkaia 7,<br>Trondheim<br>Norway</p>
+        </div>
+    </div>
+</footer>
+<div class="socialRow">
+    <img src="img/icons/instagram.png" alt="instagram" width="30">
+    <img src="img/icons/facebook.png" alt="facebook" width="30">
+    <img src="img/icons/twitter.png" alt="twitter" width="30">
+</div>
+</div>
 </body>
 </html>
