responsive but mobilemenu isnt working yet

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
         <div class="menu">
+            <img src="img/icons/menu.png" alt="mobile menu" id="mobileMenu">
             <nav>
                 <a href="index.html">Home</a><br>
                 <a href="countries.html">Countries</a><br>
@@ -34,14 +35,14 @@
                     <span class="smallTitle">Your journey</span>
                     <h1>North</h1>
                 </div>
-                <div class="iconBox">
+                <div class="hideOnMobile iconBox">
                     <img src="img/icons/boots.png" height="50">
                     <div>
                         <span>Be it challenging rock climbing or a "family friendly" trip with beautiful sights - we know just the right place</span>
                         <a class="buttonWithIcon">See places</a>
                     </div>
                 </div>   
-                <div class="iconBox">
+                <div class="hideOnMobile iconBox">
                     <img src="img/icons/hotel.png" height="50">
                     <div>
                         <span>Find and book accommodation easily, and enjoy your time off at one of our many certified partners</span>
@@ -62,6 +63,8 @@
 <div class="bodyWrapper">
     <div class="divider"></div>
     <div class="contentWrapper">
+        <h2 class="centered">About</h2>
+        <p class="centered">Some of us like to go for mediterranean or even tropical adventures in their freetimes, while some prefer to explore other mysterious areas. Explore the world of the sagas and myths, try local specialties that you would otherwise never even think of eating, hike high in 1600 meters or dive deep in hot lagoons.Usual holiday activities in an unusual way.</p>
         <div class="overlapLeft">
             <img src="img/hiking.jpg" alt="hiking">
             <div>
@@ -138,28 +141,28 @@
 </div>
 <div class="bodyWrapper">
     <div class="contentWrapper">
-        <p class="smallTitle centered">What to do?</p>
-        <h2 class="centered">Irresistible offers</h2>
+        <p class="smallTitle centeredForced">What to do?</p>
+        <h2 class="centeredForced">Irresistible offers</h2>
         <div class="grid4col">
-            <div class="centered">
+            <div class="centeredForced">
                 <img src="img/icons/ship.png" alt="ship" width="100">
                 <p class="smallTitle"><strong>Things to do</strong></p>
                 <span>Looking for more adventure? Browse activities nearby</span>
                 <a class="buttonWithIcon centered" href="#">See offers</a>
             </div>
-            <div class="centered">
+            <div class="centeredForced">
                 <img src="img/icons/city.png" alt="city" width="100">
                 <p class="smallTitle"><strong>Places to see</strong></p>
                 <span>Explore the iconic places and historical buildings of the city</span>
                 <a class="buttonWithIcon centered" href="#">See offers</a>
             </div>
-            <div class="centered">
+            <div class="centeredForced">
                 <img src="img/icons/location-pin.png" alt="location" width="100">
                 <p class="smallTitle"><strong>Sightseeing made simple</strong></p>
                 <span>Use our maps, or ask our local guides to help you find your way</span>
                 <a class="buttonWithIcon centered" href="#">See offers</a>
             </div>
-            <div class="centered">
+            <div class="centeredForced">
                 <img src="img/icons/museum.png" alt="ship" width="100">
                 <p class="smallTitle"><strong>We've got stories to tell</strong></p>
                 <span>Today's culture is vastly affected by the past so why not explore it</span>
@@ -263,15 +266,15 @@
         <h4>Contact</h4>
         <div class="iconBox">
             <img src="img/icons/phone2.png" alt="phone">
-            <p>Tel.: +1 23 45678</p>
+            <span>Tel.: +1 23 45678</span>
         </div>
         <div class="iconBox">
             <img src="img/icons/mail.png" alt="mail">
-            <p>info@yourjourneynorth.dk</p>
+            <span>info@yourjourneynorth.dk</span>
         </div>
         <div class="iconBox">
             <img src="img/icons/address.png" alt="address">
-            <p>Fosenkaia 7,<br>Trondheim<br>Norway</p>
+            <span>Fosenkaia 7,<br>Trondheim<br>Norway</span>
         </div>
     </div>
 </footer>
