--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="mobileMenuWrapper">
-            <img src="img/icons/menu.png" alt="mobile menu" id="mobileMenu">
+            <img src="img/icons/menu.png" alt="mobile menu" id="openMobileMenu">
     </div>
         <div class="menu">
             <img src="img/icons/close.png" alt="close menu" id="closeMobileMenu" height="30">
