static bucket list looks decent with multiple items

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 </head>
 <body>
     <div id="mobileMenuWrapper">
-            <img src="img/icons/menu.png" alt="mobile menu" id="openMobileMenu">
+            <img src="img/icons/menu.png" alt="mobile menu" id="openMobileMenu"
+            class="mobileMenu">
     </div>
         <div class="menu">
-            <img src="img/icons/close.png" alt="close menu" id="closeMobileMenu" height="30">
+            <img src="img/icons/close.png" alt="close menu" 
+            id="closeMobileMenu" class="mobileMenu" height="30">
             <nav>
                 <a href="index.html">Home</a><br>
                 <a href="countries.html">Countries</a><br>
@@ -134,7 +136,7 @@
                     <a href="#" class="buttonWithIcon">Find accomodation</a>
                 </div>
                 <div class="bigBgWrapper2Right">
-                    <img src="img/video1.png" alt="Video 1" width="350">
+                    <img src="img/video1.png" alt="Video 1" width="350px">
                     <img src="img/video2.png" alt="Video 2" width="350">
                 </div>
             </div>
